add example of a ControlsFX based Name field with learning autocomplete