@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <!--
   #%L
   igniter
@@ -18,7 +19,6 @@ See the License for the specific language governing permissions and
 limitations under the License.
 #L%
 -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -46,6 +46,13 @@ limitations under the License.
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>${javafx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>12.0.0-SNAPSHOT</version>
+            <systemPath>${project.basedir}/libs/controlsfx-12.0.0-SNAPSHOT.jar</systemPath>
+            <scope>system</scope>
         </dependency>
         <dependency>
             <groupId>javax.inject</groupId>
@@ -89,6 +96,10 @@ limitations under the License.
                 <version>0.0.3</version>
                 <configuration>
                     <mainClass>com.mycodefu.App</mainClass>
+                    <options>
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
+                    </options>
                 </configuration>
             </plugin>
             <plugin>
